[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coverage-p"
version = "24.7.0"
description = "A .pth file that calls coverage.process_startup()"
readme = "README.rst"
authors = [
    {name = "Tom Most", email = "twm@freecog.net"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "coverage",
]

[project.urls]
Homepage = "https://github.com/twm/coverage-p"
Issues = "https://github.com/twm/coverage-p/issues"

[tool.setuptools]
packages = []
