[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coverage-p"
version = "25.2.0"
description = "A .pth file that calls coverage.process_startup()"
readme = "README.rst"
authors = [
    {name = "Tom Most", email = "twm@freecog.net"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
license = "MIT"
dependencies = [
    "coverage",
]

[project.urls]
Homepage = "https://github.com/twm/coverage-p"
Issues = "https://github.com/twm/coverage-p/issues"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"src/_coverage.pth" = "_coverage.pth"
